Added preference fields for web theme
